<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.opengm.events.CreateEditEventActivity">

    <RelativeLayout
        android:id="@+id/CreateEditLoadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/CreateEditLoadingCircle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CreateEditLoadingCircle"
            android:layout_centerHorizontal="true"
            android:text="Adding the event... Please wait."/>
    </RelativeLayout>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/CreateEditScreen">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateEditEventNameText"
        android:hint="@string/EventNameTextHint"
        android:editable="true"
        android:textAlignment="center"
        android:singleLine="true"
        android:maxLines="1"
        android:minLines="1" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateEditEventPlaceText"
        android:layout_below="@+id/CreateEditEventNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/EventPlaceTextHint"
        android:editable="true"
        android:textAlignment="center"
        android:singleLine="true"
        android:minLines="1"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/CreateEditButtonLayout"
        android:layout_below="@id/CreateEditEventPlaceText">

        <Button
            android:background="@drawable/rounded_buttons"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/CreateEditEventTimeText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/EventTimeTextHint"
            android:textAlignment="center"
            android:onClick="showTimePickerDialog"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <Button
            android:background="@drawable/rounded_buttons"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/CreateEditEventDateText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/EventDateTextHint"
            android:textAlignment="center"
            android:onClick="showDatePickerDialog" />


    </LinearLayout>

    <MultiAutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateEditEventDescriptionText"
        android:hint="@string/EventDescriptionTextHint"
        android:layout_below="@id/CreateEditButtonLayout"
        android:editable="true"
        android:nestedScrollingEnabled="true"
        android:minLines="3"
        android:maxLines="3"
        android:elegantTextHeight="false"
        android:clickable="false"
        android:autoText="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:textAlignment="gravity"
        android:gravity="top|left" />

    <Button
        android:background="@drawable/rounded_buttons"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/CreateEditOkButton"
        android:layout_weight="1"
        android:textAlignment="center"
        android:text="@string/OkEditButtonText"
        android:clickable="true"
        android:onClick="onOkButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/CreateEditEventBitmapLayout" />


    <Button
        android:background="@drawable/rounded_buttons"
        android:textColor="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateEditEventParticipantsButton"
        android:text="@string/EventParticipantsText"
        android:textAlignment="center"
        android:clickable="true"
        android:onClick="onParticipantsButtonClick"
        android:layout_alignParentRight="true"
        android:layout_below="@id/CreateEditEventDescriptionText"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/CreateEditEventBitmapLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_above="@+id/CreateEditSeparator">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/CreateEditEventBitmapNameText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="No image selected yet"
            android:textAlignment="center"/>

        <Button
            android:background="@drawable/rounded_buttons"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CreateEditEventBitmapBrowseButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Browse..."
            android:textAlignment="center"
            android:onClick="onBrowseButtonClick" />

    </LinearLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:layout_below="@+id/CreateEditEventParticipantsButton"
        android:layout_above="@+id/CreateEditEventBitmapLayout"
        android:isScrollContainer="false" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CreateEditEventParticipantsTextView" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/CreateEditOkButton"
        android:id="@+id/CreateEditSeparator"
        android:visibility="invisible"/>
</RelativeLayout>

</RelativeLayout>
