...

    <string name="title_activity_modify_group">ModifyGroup</string>
    <string name="modify_group_add">Add members</string>
    <string name="modify_group_roles">Create new roles</string>

    <string name="CreateEditEarlyDate">Invalide date (already past)</string>
    <string name="CreateEditEmptyTimeDateErrorMessage">Time and Date must be specified</string>
    <string name="CreateEditEmptyDateErrorMessage">Date must be specified</string>
    <string name="CreateEditEmptyTimeErrorMessage">Time must be specified</string>
    <string name="CreateEditEmptyNameErrorMessage">Name must be specified</string>
    <string name="CreateEditNoParticipants">Participants must be specified</string>
    <string name="EventListSuccessfullAdd">Event successfully added</string>
    <string name="EventListFailToAdd">Couldn\'t add the new event</string>
    <string name="CreateEditFailToAddParticipants">Fail to add participants</string>
    <string name="CreateEditSuccessfullAddParticipants">Successfully added participants</string>
    <string name="groupNameTooShort">Group name is too short</string>
    <string name="groupNameTooLong">Group name is too long</string>
...
