<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_group_outmostLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".groups.CreateEditGroupActivity">

    <!--
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/createbackground"
        android:scaleType="fitXY" />
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp"
        android:weightSum="100">

        <EditText
            android:id="@+id/enterGroupName"
            style="@style/welcomeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_weight="10"
            android:hint="@string/enterGroupNameHint"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:id="@+id/enterGroupDescription"
            style="@style/welcomeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:ems="10"
            android:hint="@string/enterGroupDescriptionHint"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="3" />

        <Button
            android:id="@+id/chooseGroupImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_weight="40"
            android:background="@drawable/rounded_buttons"
            android:drawableStart="@mipmap/ic_add_to_photos_white_24dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/chooseGroupPhoto"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/createGroupsMembersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_weight="10"
            android:background="@drawable/rounded_buttons"
            android:onClick="manageMembers"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/create_groups_members"
            android:textColor="#ffffff"
            android:visibility="gone" />

        <Button
            android:id="@+id/doneGroupCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="createGroup"
            android:text="@string/done"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
